--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha13'
+        classpath 'com.android.tools.build:gradle:3.4.0-alpha01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +25,16 @@ ext {
     appCompatVersion = "1.0.0"
     constraintLayoutVersion = "1.1.3"
     materialVersion = "1.0.0"
+
+    retrofitVersion = "2.4.0"
+    gsonVersion = "2.4.0"
+
+    rxKotlinVersion = "2.3.0"
+    rxAndroidVersion = "2.0.2"
+    rxJava2Version = "2.3.0"
+
+    timberVersion = "4.7.1"
+    okhttpVersion = "3.11.0"
 }
 
 allprojects {
