Code cleanup for @mictab

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,13 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$rootProject.ext.timberVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttpVersion"
 
+    // Maps
+    implementation "com.google.android.gms:play-services-maps:$rootProject.ext.mapsVersion"
+
     // Testing
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 }
