--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ ext {
     rxAndroidVersion = "2.0.2"
     rxJava2Version = "2.3.0"
 
+    mapsVersion = "16.0.0"
+
     timberVersion = "4.7.1"
     okhttpVersion = "3.11.0"
 }
