--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.11'
     repositories {
         google()
         jcenter()
@@ -21,8 +21,8 @@ ext {
     compileSdkVersion = 28
     targetSdkVersion = 28
 
-    ktxVersion = '1.0.0'
-    appCompatVersion = "1.0.0"
+    ktxVersion = '1.0.1'
+    appCompatVersion = "1.0.2"
     constraintLayoutVersion = "1.1.3"
     materialVersion = "1.0.0"
 
@@ -39,6 +39,8 @@ ext {
     okhttpVersion = "3.11.0"
 
     instabugVersion = "8.0.11"
+
+    daggerVersion = "2.19"
 }
 
 allprojects {
