--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
             android:name=".LauncherActivity"
             android:theme="@style/AppTheme.Launcher">
@@ -36,6 +37,9 @@
             android:name=".login.views.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="KEY"/>
     </application>
 
 </manifest>
