Using resource strings and removing unused files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".login.views.LoginActivity"
-            android:label=""
+            android:label="@string/app_name"
             android:screenOrientation="portrait" />
     </application>
 
