--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
         // NOTE: Do not place your application dependencies here; they belong
@@ -42,6 +42,8 @@ ext {
     instabugVersion = "8.0.11"
 
     daggerVersion = "2.19"
+    firebaseCore = "16.0.7"
+    firebaseMessagingVersion = "17.3.4"
 }
 
 allprojects {
