--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".MainActivity" />
         <activity
             android:name=".login.views.ForgotPasswordActivity"
-            android:label="Forgot password"
+            android:label="@string/forgot_password"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
@@ -47,7 +47,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="INSERT_KEY" />
+            android:value="@string/maps_api_key" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
