--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,11 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/maps_api_key" />
+            android:value="API_KEY" />
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="API_KEY" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
