--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
+        //noinspection GradleDynamicVersion
+        classpath 'io.fabric.tools:gradle:1.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -44,13 +46,14 @@ ext {
     firebaseMessagingVersion = "17.4.0"
 
     threetenabpVersion = "1.2.0"
+
+    crashlyticsVersion = "2.9.9@aar"
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
