--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,19 +40,20 @@
             android:name=".login.views.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".events.views.EventDetailActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".notifications.PushNotificationsActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/send_notifications" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="API_KEY" />
-
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="API_KEY" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/notification_channel_id" />
