--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
         transitive = true
     }
 
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+
     // Testing
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
