--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okhttpVersion"
 
     implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
 
     // Maps
@@ -83,6 +84,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'androidx.preference:preference:1.1.0-beta01'
 
     // Testing
     implementation 'androidx.appcompat:appcompat:1.0.2'
