--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:label=""
             android:screenOrientation="portrait" />
 
+        <activity android:name=".profile.SettingsActivity"
+            android:label=""
+            android:screenOrientation="portrait" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="" />
