--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="se.studieresan.studs">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".StudsApplication"
@@ -46,42 +46,12 @@
             android:name=".events.views.EventDetailActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".notifications.PushNotificationsActivity"
-            android:label="@string/send_notifications"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".events.views.PreEventFormActivity"
+            android:name=".profile.SettingsActivity"
             android:label=""
             android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".events.views.PostEventFormActivity"
-            android:label=""
-            android:screenOrientation="portrait" />
-
-        <activity android:name=".profile.SettingsActivity"
-            android:label=""
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".trip.TripInfoActivity"
-            android:label=""
-            android:screenOrientation="portrait" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="" />
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="" />
-        <meta-data
-            android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="@string/notification_channel_id" />
-
-        <service android:name=".fcm.StudsFirebaseMessagingService">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
