--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta05'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.0'
-        //noinspection GradleDynamicVersion
-        classpath 'io.fabric.tools:gradle:1.+'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -27,7 +21,7 @@ ext {
     ktxVersion = '1.0.2'
     appCompatVersion = "1.0.2"
     constraintLayoutVersion = "1.1.3"
-    materialVersion = "1.0.0"
+    materialVersion = "1.2.1"
 
     retrofitVersion = "2.4.0"
     gsonVersion = "2.4.0"
@@ -42,8 +36,6 @@ ext {
     okhttpVersion = "3.11.0"
 
     daggerVersion = "2.19"
-    firebaseCore = "16.0.7"
-    firebaseMessagingVersion = "17.4.0"
 
     threetenabpVersion = "1.2.0"
 
