--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
     implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
 
     // Maps
