--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.4.30'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,26 +18,26 @@ ext {
     compileSdkVersion = 29
     targetSdkVersion = 29
 
-    ktxVersion = '1.0.2'
+    ktxVersion = '1.3.2'
     appCompatVersion = "1.0.2"
-    constraintLayoutVersion = "1.1.3"
-    materialVersion = "1.2.1"
+    constraintLayoutVersion = '2.0.4'
+    materialVersion = '1.3.0'
 
-    retrofitVersion = "2.4.0"
-    gsonVersion = "2.4.0"
+    retrofitVersion = '2.9.0'
+    gsonVersion = '2.9.0'
 
     rxKotlinVersion = "2.3.0"
     rxAndroidVersion = "2.1.1"
-    rxJava2Version = "2.3.0"
+    rxJava2Version = '2.9.0'
 
-    mapsVersion = "16.0.0"
+    mapsVersion = '17.0.0'
 
     timberVersion = "4.7.1"
-    okhttpVersion = "3.11.0"
+    okhttpVersion = '5.0.0-alpha.2'
 
-    daggerVersion = "2.19"
+    daggerVersion = '2.32'
 
-    threetenabpVersion = "1.2.0"
+    threetenabpVersion = '1.3.0'
 
     crashlyticsVersion = "2.9.9@aar"
 }
