--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
+plugins {
+    id 'com.google.secrets_gradle_plugin' version '0.5'
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+}
 
 android {
     compileSdkVersion 29
@@ -63,6 +63,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
 
     // Maps
