--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,10 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
 
     // Maps
