adds input fields in create happenings view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     // Maps
     implementation "com.google.android.gms:play-services-maps:$rootProject.ext.mapsVersion"
 
+    // Places
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+
     // FCM
 
     implementation "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threetenabpVersion"
