--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
+plugins {
+    id 'com.google.secrets_gradle_plugin' version '0.5'
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id("com.apollographql.apollo").version("2.5.6")
+}
 
 android {
     compileSdkVersion 29
@@ -32,10 +33,23 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
 }
 
 androidExtensions {
     experimental = true
+}
+
+apollo {
+    schemaFile = file("src/main/java/com/studieresan/studs/graphql/schema.json")
+    generateKotlinModels.set(true)
+    customTypeMapping = [
+            "DateTime" : "java.time.LocalDateTime"
+    ]
 }
 
 dependencies {
@@ -64,6 +78,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
+
 
     // Maps
     implementation "com.google.android.gms:play-services-maps:$rootProject.ext.mapsVersion"
@@ -71,7 +87,6 @@ dependencies {
     // FCM
 
     implementation "com.jakewharton.threetenabp:threetenabp:$rootProject.ext.threetenabpVersion"
-
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
@@ -84,5 +99,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    // Apollo
+    implementation("com.apollographql.apollo:apollo-runtime:2.5.6")
+    implementation("com.apollographql.apollo:apollo-coroutines-support:2.5.6")
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01"
+    compileOnly 'org.jetbrains:annotations:13.0'
+    testCompileOnly 'org.jetbrains:annotations:13.0'
+
 }
 
